--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=api-rest-nuvem
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+spring.profiles.active=dev
