--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+# management.endpoints.web.exposure.include=*
+# management.endpoint.health.probes.enabled=true
+# management.health.show-details=always
 
 spring.profiles.active=dev
